<resources>
    <string name="app_name">CUMPOT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="besh">Besh</string>
    <string name="qazy">qazy</string>
    <string name="beshparmak">beshparmak</string>
    <string name="qazy_img">qazy_img</string>
    <string name="baursaks">Бауырсаки</string>
    <string name="syrne">Сырне</string>
    <string name="sorpa">Сорпа</string>
    <string name="quirdaq">Куырдак</string>
    <string name="beshbarmaks">Бешбармак</string>
    <string name="qazys">Казы</string>
    <string name="shuzik">Шужык</string>
    <string name="qarta">Карта</string>
    <string name="back2">Назад</string>
    <string name="back">Назад</string>
    <string name="besh_img">besh_img</string>
    <string name="info_qazy">TextView</string>
    <string name="back_4">Назад</string>
    <string name="qarta_menu">qarta_menu</string>
    <string name="qarta_img">qarta_img</string>
    <string name="sorpa_img">sorpa_img</string>
    <string name="sorpa_menu">sorpa_menu</string>
    <string name="quirdaq_menu">quirdaq_menu</string>
    <string name="quirdaq_img">quirdaq_img</string>
    <string name="baursaks_menu">baursaks_menu</string>
    <string name="baursaks_img">baursaks_img</string>
    <string name="syrne_menu">syrne_menu</string>
    <string name="syrne_img">syrne_img</string>
    <string name="besh_info">Бешбарма́к, бишбарма́к, бесбарма́к — традиционное мясо-мучное блюдо тюркоязычных народов. Бешбармак готовится, как правило, по случаю семейных праздников или приёма дорогих гостей. В целом, блюдо представляет собой крошеное отварное мясо с лапшой, луковым соусом и некоторыми особенностями в технологии приготовления и подачи, что позволяет достичь вкуса, присущего именно этому блюду.</string>
    <string name="qazy_info">Казы (тат. казылык, башк. ҡаҙы, ҡаҙылыҡ, каз. қазы, кирг. казы, узб. qazi, крымскотат. къазылыкъ) — жир с брюшины, используемый при приготовлении деликатесной домашней колбасы из конины у ряда тюркских народов. Колбаса называется казы или чучук.</string>
    <string name="syrne_info">Мясо для сырне берут молодую ягнятину, из взрослого барашка такого нежного сырне не получится. Затем мясо немного маринуют в специях и тушат на пару 6 часов. За час до окончания тушения добавляют крупно порезанные овощи: в данном блюде были картофель и морковь.</string>
    <string name="shuzik_info">Суджу́к (азерб. sucuq, тур. sucuk, арм. սուջուխ, Անեփ), шужу́к или чужу́к (каз. шұжық), чучу́к (кирг. чучук), (чувашское сутă) — традиционные колбасы у тюркских, кавказских, балканских и ближневосточных народов.</string>
    <string name="qarta_info">Карта́ (каз. қарта, башк. ҡарта) — конская толстая кишка, вывернутая наизнанку (жиром внутрь). Готовится путём промывки и слабого засаливания. Употребляется в варёном виде. Считается деликатесом у тюркских народов (казахов, киргизов, татар, каракалпаков). У татар конская кишка, вывернутая жиром внутрь, называется эйлендирме (әйләндермә).</string>
    <string name="sorpa_info">Сорпа (шурпа) - это национальное казахское блюдо из баранины, которое станет украшением любого стола.</string>
    <string name="quirdaq_info">Куырдак - это национальное казахское мясное блюдо из субпродуктов. Чтобы приготовить куырдак по-казахски нужно санчала обжарить все мясо, кроме печени, после чего можно по очереди добавлять остальные ингредиенты. Последними добавляем картофель и печень.</string>
    <string name="baursaq_info">Баурса́к - традиционное мучное изделие алтайцев, ногайцев, хакасов, башкир, бурятов, донских казаков, казахов, калмыков, киргизов, монголов, таджиков, татар, тувинцев, туркмен, узбеков, кумыков и уйгуров.</string>
</resources>